--- a/src/InputOption.css
+++ b/src/InputOption.css
@@ -6,3 +6,11 @@
     padding: 10px;
     cursor: pointer;
 }   
+ .inputOption:hover{
+    background-color: whitesmoke;
+    border-radius: 10px;
+}
+
+.inputOption > h4 {
+    margin-left: 5px;
+} 
